[package]
name = "pytorch_tch-rs"
version = "0.1.0"
authors = ["Roberto Chavez Jr <rchavezj.ai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.3.1"
openssl = { version = "0.10", features = ["vendored"] }
